# machine_learning_tp

./: .gitignore  README.md  pyproject.toml
decision-tree/: __init__.py  lgbm_tester.py  submission_house_value.csv  tree_tester.py
ynov-data/: submission.csv  train_housing_test.csv  train_housing_train.csv  train_housing_valid.csv
ynov-notebooks/: Regression_linéaire.ipynb  explore_data_housing.ipynb  housing_valid.csv  submission.csv  train_housing_regression_lineaire_simple.ipynb  train_housing_regression_multiple.ipynb
ynov-notebooks/.ipynb_checkpoints/: train_housing_regression_multiple-checkpoint.ipynb
ynov/models_training/: model_regressor.py  utils_models.py
